# unofficial-pecron-api

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: query_devices.py
src/unofficial_pecron_api/: __init__.py  __main__.py  auth.py  cli.py  client.py  const.py  exceptions.py  models.py
tests/: test_auth.py  test_client.py  test_models.py
